--- a/index.html
+++ b/index.html
@@ -1,6 +1,61 @@
-<html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Aneeba Chaudary</title>
+  <style>
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #fafafa; color: #222; }
+    header { background: #222; color: white; text-align: center; padding: 2rem 1rem; }
+    nav a { color: #ffc107; margin: 0 10px; text-decoration: none; font-weight: bold; }
+    section { max-width: 900px; margin: 2rem auto; padding: 1rem; background: white; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); }
+    h1, h2 { color: #444; }
+    footer { text-align: center; padding: 1rem; color: #666; }
+  </style>
+</head>
 
 <body>
-Hi
+  <header>
+    <h1>Aneeba Chaudary</h1>
+    <p>PhD Candidate · Materials Science & Engineering · Iowa State University</p>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#projects">Projects</a>
+      <a href="#awards">Awards</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
+
+  <section id="about">
+    <h2>About Me</h2>
+    <p>I am developing PFAS-free omniphobic textile coatings by synthesizing and stratifying Janus nanoparticles with crosslinkable binders. My broader interests include surface engineering, sustainable materials, and supramolecular chemistry.</p>
+  </section>
+
+  <section id="projects">
+    <h2>Key Projects</h2>
+    <ul>
+      <li><strong>PFAS-free coatings:</strong> PS-co-PVA/MPTS Janus nanoparticles for oil/water repellency.</li>
+      <li><strong>Dynamic covalent chemistry:</strong> Self-assembly of imine/hydrazone-based macrocycles.</li>
+    </ul>
+  </section>
+
+  <section id="awards">
+    <h2>Awards & Leadership</h2>
+    <ul>
+      <li>Outstanding Student Award – Donghua University (twice)</li>
+      <li>Vice President – Pakistani Students Association, ISU</li>
+      <li>Moderator & Speaker – International Materials Conference</li>
+    </ul>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:aneeba@iastate.edu">aneeba@iastate.edu</a></p>
+    <p><a href="https://www.linkedin.com/in/aneeba-chaudary">LinkedIn</a> | <a href="https://scholar.google.com/">Google Scholar</a></p>
+  </section>
+
+  <footer>
+    © <script>document.write(new Date().getFullYear());</script> Aneeba Chaudary
+  </footer>
 </body>
 </html>
