--- a/index.html
+++ b/index.html
@@ -601,9 +601,11 @@
     <section id="hero" class="hero">
         <div class="container">
             <div class="hero-photo">
-                <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <!-- <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path>
-                </svg>
+                </svg> -->
+                 <img src="headshot.jpg" alt="Aneeba Chaudary" />
+                
             </div>
             <h1>Aneeba Chaudary</h1>
             <p class="hero-subtitle">PhD Candidate | Material Science & Engineering</p>
