Update hero-photo styles for image - size colors
Comment out SVG styles and add styles for images in the hero section.

--- a/index.html
+++ b/index.html
@@ -193,10 +193,16 @@
             justify-content: center;
         }
 
-        .hero-photo svg {
+        /* .hero-photo svg {
             width: 6rem;
             height: 6rem;
             color: var(--primary);
+        } */
+        .hero-photo img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 50%;
         }
 
         .hero h1 {
