--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Aneeba Chaudary | Ph.D. Candidate — Materials Science & Engineering</title>
+  <title>Aneeba Chaudary | Ph.D. Candidate — Textile & Materials Science Engineer </title>
   <meta name="description" content="PFAS‑free omniphobic textile coatings • Janus nanoparticles • Surface & colloid engineering • 9 publications • 100+ citations. Ph.D. candidate at Iowa State University." />
   <meta property="og:title" content="Aneeba Chaudary | Materials Science & Engineering" />
   <meta property="og:description" content="Research on PFAS‑free omniphobic coatings using Janus nanoparticles; surface engineering; sustainable materials." />
